--- a/src/main/resources/com/thales/schoolmanagingjfx/gestionGrade.fxml
+++ b/src/main/resources/com/thales/schoolmanagingjfx/gestionGrade.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -37,7 +38,7 @@
                             </font>
                         </Label>
                         <Pane prefHeight="8.0" prefWidth="402.0" style="-fx-background-color: #e4de9b;" />
-                        <Pane prefHeight="24.0" prefWidth="364.0" />
+                        <Pane prefHeight="4.0" prefWidth="364.0" />
                         <HBox alignment="CENTER_LEFT" prefHeight="44.0" prefWidth="364.0">
                             <children>
                                 <Label text="ID Classe :   ">
@@ -66,7 +67,7 @@
                                 </TextField>
                             </children>
                         </HBox>
-                        <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="364.0">
+                        <HBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="364.0">
                             <children>
                                 <Label prefHeight="26.0" prefWidth="104.0" text="Section :   ">
                                     <font>
@@ -80,6 +81,16 @@
                         </TextField>
                             </children>
                         </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="41.0" prefWidth="364.0">
+                     <children>
+                        <Label prefHeight="26.0" prefWidth="126.0" text="Prof. principal">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font>
+                        </Label>
+                        <ComboBox fx:id="cbMainTeacher" prefHeight="26.0" prefWidth="234.0" />
+                     </children>
+                  </HBox>
                         <Pane prefHeight="8.0" prefWidth="402.0" style="-fx-background-color: #e4de9b;" />
                         <Pane prefHeight="13.0" prefWidth="364.0" />
                         <HBox alignment="CENTER" prefHeight="85.0" prefWidth="364.0">
