--- a/src/main/resources/com/thales/schoolmanagingjfx/userConnect.fxml
+++ b/src/main/resources/com/thales/schoolmanagingjfx/userConnect.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -22,7 +23,7 @@
                             </font>
                         </Label>
                         <Pane prefHeight="100.0" prefWidth="76.0" />
-                        <TextField fx:id="txtUser" prefHeight="30.0" prefWidth="190.0">
+                        <TextField fx:id="txtUser" prefHeight="30.0" prefWidth="185.0">
                      <font>
                         <Font size="14.0" />
                      </font></TextField>
@@ -36,10 +37,7 @@
                             </font>
                         </Label>
                         <Pane prefHeight="100.0" prefWidth="50.0" />
-                        <TextField fx:id="txtPassWord" prefHeight="30.0" prefWidth="187.0">
-                     <font>
-                        <Font size="14.0" />
-                     </font></TextField>
+                  <PasswordField fx:id="txtPassWord" prefHeight="30.0" prefWidth="182.0" />
                     </children>
                 </HBox>
                 <Button fx:id="btnConnect" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="38.0" prefWidth="100.0" style="-fx-background-color: #e4de9b;" text="Connexion">
